[package]
name = "kinito"
version = "0.1.0"
authors = ["Bailey Cosier <bailey.cosier@gmail.com>"]
license = "MIT"
description = "[Alpha] Mobile framework & build tools for Android / iOS"
repository = "https://github.com/openkinito/kinito"

build = "build.rs"

[build-dependencies]
zip = "0.2.5"

[dependencies]
android_ffi = "^0.1.0"
android_support = "^0.1.0"

clap = "^2.25.1"
toml = "0.4.2"
term = "0.4.6"

log = "0.3.8"
env_logger = "0.4.3"

serde = "^1.0.10"
serde_derive = "^1.0.10"
serde_json = "^1.0.2"


